--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             align-items: center;
             min-height: 100vh;
             position: relative;
-            overflow: hidden;
         }
 
         /* Tło z delikatnym rysunkiem matematycznym */
@@ -32,7 +31,7 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            opacity: 0.4;
+            opacity: 0.3;
             z-index: -1;
         }
 
@@ -40,7 +39,7 @@
         h1 {
             font-family: 'Lora', serif;
             color: #b5651d;
-            font-size: 2.5em;
+            font-size: 2em;
             margin-top: 20px;
             text-align: center;
         }
@@ -48,9 +47,9 @@
         /* Kontener na kafelki */
         .container {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-            max-width: 1000px;
+            grid-template-columns: 1fr;
+            gap: 15px;
+            max-width: 100%;
             padding: 20px;
             margin-top: 20px;
         }
@@ -72,14 +71,14 @@
         .tile h3 {
             font-family: 'Lora', serif;
             color: #b5651d;
-            font-size: 1.5em;
+            font-size: 1.3em;
             margin-bottom: 10px;
         }
 
         .tile p {
             color: #333333;
             font-size: 1em;
-            line-height: 1.5;
+            line-height: 1.4;
         }
 
         .tile a {
@@ -92,27 +91,28 @@
             font-size: 1em;
             color: #b5651d;
             text-align: center;
-            padding: 20px;
-            margin-top: auto;
+            padding: 10px;
+            margin-top: 20px;
         }
 
-        /* Responsywność dla urządzeń mobilnych */
-        @media (max-width: 768px) {
+        /* Responsywność dla większych ekranów */
+        @media (min-width: 600px) {
+            .container {
+                grid-template-columns: 1fr 1fr;
+            }
+
             h1 {
-                font-size: 2em;
-                margin: 10px;
+                font-size: 2.5em;
+            }
+        }
+
+        @media (min-width: 900px) {
+            .container {
+                grid-template-columns: 1fr 1fr 1fr;
             }
 
-            .tile {
-                padding: 15px;
-            }
-
-            .tile h3 {
-                font-size: 1.2em;
-            }
-
-            .footer {
-                font-size: 0.9em;
+            h1 {
+                font-size: 3em;
             }
         }
     </style>
@@ -164,4 +164,3 @@
     </div>
 </body>
 </html>
-
